deployments/dev/billing-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: billing
  labels:
    app: billing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: billing
  template:
    metadata:
      labels:
        app: billing
    spec:
      containers:
        - env:
            - name: MYSQL_DATABASE
              value: billing
            - name: MYSQL_HOST
              value: external-mysql.default.svc
            - name: MYSQL_PORT
              value: "3306"
            - name: MYSQL_ROOT_PASSWORD
              value: root
            - name: MYSQL_USER
              value: root
          image: pepeunlimited/billing:0.0.1-14-g3b183e7
          name: billing
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
