deployments/dev/billing-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: billing
spec:
  ports:
    - protocol: TCP
      targetPort: 8080
      port: 80
  selector:
    app: billing
